--- a/public/tema/css/New folder/shortcodes.css
+++ b/public/tema/css/New folder/shortcodes.css
@@ -1224,6 +1224,8 @@ body{ counter-reset: section; }
     left: 10px;
     right: 10px;
     bottom: 10px;
+    width: 356px;
+    height: 155px;
     opacity: 0;
     z-index: 1;
     -webkit-transition: 0.5s ease-in-out;
