--- a/public/tema/css/main.css
+++ b/public/tema/css/main.css
@@ -939,7 +939,7 @@ a {
 }
 
 .mt-10 {
-    margin-top: 10px !important;
+    margin-top: -40px !important;
 }
 
 .mt-15 {
@@ -2392,7 +2392,7 @@ ul.ttm-pricelist-block li .service-price {
 }
 
 .site-branding img {
-    max-height: 57px;
+    max-height: 50px;
 }
 
 /** SiteNavigation(Menu) **/
@@ -4497,4 +4497,17 @@ a {
         
         #slider .carousel-indicators [data-bs-target].active {
             background-color: #1dc6a1;
+        }
+
+        .row-set{
+            --bs-gutter-x: -8rem;
+    --bs-gutter-y: -3rem;
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: calc(-1 * var(--bs-gutter-y));
+    margin-right: calc(-.5 * var(--bs-gutter-x));
+    margin-left: calc(-.5 * var(--bs-gutter-x));
+        }
+        .font-impor{
+            color: #033b4a !important;
         }
