--- a/public/tema/css/New folder/responsive.css
+++ b/public/tema/css/New folder/responsive.css
@@ -48,6 +48,7 @@
 	.ttm-right-span .ttm-col-wrapper-bg-layer ,
 	.col-bg-img-one .ttm-right-span .ttm-col-wrapper-bg-layer{
 	    margin-right: -200px;
+		top: 10%;
 	}
 }
 
@@ -179,7 +180,7 @@
 	    padding-left: 20px;
 	    float: right;
 	    line-height: 48px;
-	    bottom: -18px;
+	    top: -18px;
 	    font-size: 16px;
 	    color: #fff;
 	    font-weight: 500;
